--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,15 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAV1b9XDeOA-qPN5w_IQXBa0ER8_HD4lWA&callback=initMap"></script> -->
     <title>Travel Log App</title>
   </head>
   <body>
