--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,7 @@
       content="Web site created using create-react-app"
     />
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAV1b9XDeOA-qPN5w_IQXBa0ER8_HD4lWA&callback=initMap"></script> -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAV1b9XDeOA-qPN5w_IQXBa0ER8_HD4lWA&libraries=places"></script>
     <title>Travel Log App</title>
   </head>
   <body>
