changed title name

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,7 @@
     />
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAV1b9XDeOA-qPN5w_IQXBa0ER8_HD4lWA&callback=initMap"></script> -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAV1b9XDeOA-qPN5w_IQXBa0ER8_HD4lWA&libraries=places"></script>
-    <title>Travel Log App</title>
+    <title>Jn'J: Journey and Journal</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
